--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,18 +15,21 @@
     "axios": "^1.7.7",
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
-    "expo-server-sdk": "^3.11.0",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
-    "google-auth-library": "^9.14.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "pino": "^8.13.0",
+    "pino-pretty": "^10.2.0",
     "socket.io": "^4.8.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
